exports[`test should not render breadcrumbs with one element 1`] = `
<ul
  className="nav navbar-nav nav-crumbs">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "my-project",
          },
        }
      }>
      <qualifier-icon
        qualifier="TRK" />
       
      <strong>
        My Project
      </strong>
    </Link>
  </li>
</ul>
`;

exports[`test should render organization 1`] = `
<ul
  className="nav navbar-nav nav-crumbs">
  <li>
    <OrganizationLink
      organization={
        Object {
          "key": "foo",
          "name": "The Foo Organization",
        }
      }>
      The Foo Organization
    </OrganizationLink>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "id": "my-project",
          },
        }
      }>
      <qualifier-icon
        qualifier="TRK" />
       
      <strong>
        My Project
      </strong>
    </Link>
  </li>
</ul>
`;
